# resume

./: Cargo.toml  config.yaml  index.html
src/: main.rs
src/layout/: basic.rs  mod.rs
src/model/: candidate.rs  meta.rs  mod.rs
