[package]
name = "resume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-console = "0.3.0"
itertools = "0.12.0"
leptos = { version = "0.6.3", features = ["csr"] }
serde = "1.0.196"
serde_yaml = "0.9.30"
strum = { version = "0.26.0", features = ["derive"] }
